--- a/battleships-resurrection/pom.xml
+++ b/battleships-resurrection/pom.xml
@@ -7,6 +7,10 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/raydac/battleships-resurrection/issues</url>
@@ -48,6 +52,16 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
                 <groupId>com.igormaznitsa</groupId>
                 <artifactId>mvn-jlink-wrapper</artifactId>
                 <version>1.1.0</version>
@@ -75,7 +89,17 @@
         </dependencies>
     </dependencyManagement>
 
+    <profiles>
+        <profile>
+            <id>midlet</id>
+            <modules>
+                <module>battleships-client-a008</module>
+            </modules>
+        </profile>
+    </profiles>
+
     <modules>
+        <module>gex-playroom-server</module>
         <module>battleships-client-pc</module>
     </modules>
 
