fixed mac assembly script

--- a/battleships-resurrection/battleships-client-pc/pom.xml
+++ b/battleships-resurrection/battleships-client-pc/pom.xml
@@ -80,6 +80,7 @@
                                     <providerConfig>
                                         <type>${embedded.jdk.type}</type>
                                         <version>${embedded.jdk.version}</version>
+                                        <os>macos</os>
                                         <arch>amd64</arch>
                                     </providerConfig>
                                 </configuration>
