--- a/battleships-resurrection/battleships-client-pc/pom.xml
+++ b/battleships-resurrection/battleships-client-pc/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.igormaznitsa</groupId>
         <artifactId>battleships-resurrection</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>battleships-client-pc</artifactId>
