--- a/battleships-resurrection/pom.xml
+++ b/battleships-resurrection/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.igormaznitsa</groupId>
     <artifactId>battleships-resurrection</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -17,6 +17,8 @@
     </issueManagement>
 
     <inceptionYear>2001</inceptionYear>
+
+    <url>https://github.com/raydac/battleships-resurrection</url>
 
     <developers>
         <developer>
