added build for MacOS Arm64

--- a/battleships-resurrection/battleships-client-pc/pom.xml
+++ b/battleships-resurrection/battleships-client-pc/pom.xml
@@ -37,7 +37,7 @@
             <properties>
                 <embedded.jdk.provider>BELLSOFT</embedded.jdk.provider>
                 <embedded.jdk.type>jdk</embedded.jdk.type>
-                <embedded.jdk.version>11.0.10+9</embedded.jdk.version>
+                <embedded.jdk.version>15.0.2+10</embedded.jdk.version>
             </properties>
             <build>
                 <plugins>
@@ -66,7 +66,7 @@
                                     <goal>cache-jdk</goal>
                                 </goals>
                                 <configuration>
-                                    <jdkPathProperty>mvnjlink.jdk.linux.path</jdkPathProperty>
+                                    <jdkPathProperty>mvnjlink.jdk.linux.amd64.path</jdkPathProperty>
                                     <provider>${embedded.jdk.provider}</provider>
                                     <providerConfig>
                                         <type>${embedded.jdk.type}</type>
@@ -77,12 +77,12 @@
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>cache-macos-jdk</id>
+                                <id>cache-macos-jdk-amd64</id>
                                 <goals>
                                     <goal>cache-jdk</goal>
                                 </goals>
                                 <configuration>
-                                    <jdkPathProperty>mvnjlink.jdk.macos.path</jdkPathProperty>
+                                    <jdkPathProperty>mvnjlink.jdk.macos.amd64.path</jdkPathProperty>
                                     <provider>${embedded.jdk.provider}</provider>
                                     <providerConfig>
                                         <type>${embedded.jdk.type}</type>
@@ -93,12 +93,28 @@
                                 </configuration>
                             </execution>
                             <execution>
+                                <id>cache-macos-jdk-arm64</id>
+                                <goals>
+                                    <goal>cache-jdk</goal>
+                                </goals>
+                                <configuration>
+                                    <jdkPathProperty>mvnjlink.jdk.macos.arm64.path</jdkPathProperty>
+                                    <provider>${embedded.jdk.provider}</provider>
+                                    <providerConfig>
+                                        <type>${embedded.jdk.type}</type>
+                                        <version>${embedded.jdk.version}</version>
+                                        <os>macos</os>
+                                        <arch>aarch64</arch>
+                                    </providerConfig>
+                                </configuration>
+                            </execution>
+                            <execution>
                                 <id>cache-windows-jdk</id>
                                 <goals>
                                     <goal>cache-jdk</goal>
                                 </goals>
                                 <configuration>
-                                    <jdkPathProperty>mvnjlink.jdk.windows.path</jdkPathProperty>
+                                    <jdkPathProperty>mvnjlink.jdk.windows.amd64.path</jdkPathProperty>
                                     <provider>${embedded.jdk.provider}</provider>
                                     <providerConfig>
                                         <type>${embedded.jdk.type}</type>
@@ -123,7 +139,7 @@
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>make-jre-linux</id>
+                                <id>make-jre-linux-amd64</id>
                                 <goals>
                                     <goal>jlink</goal>
                                 </goals>
@@ -131,9 +147,9 @@
                                     <toolJdk>${mvnjlink.jdk.work.path}</toolJdk>
                                     <jdepsReportPath>${project.build.directory}${file.separator}jdeps.out
                                     </jdepsReportPath>
-                                    <output>${project.build.directory}${file.separator}jre_linux</output>
+                                    <output>${project.build.directory}${file.separator}jre_linux_amd64</output>
                                     <modulePaths>
-                                        <path>${mvnjlink.jdk.linux.path}${file.separator}jmods</path>
+                                        <path>${mvnjlink.jdk.linux.amd64.path}${file.separator}jmods</path>
                                     </modulePaths>
                                     <options>
                                         <option>--compress=2</option>
@@ -146,7 +162,7 @@
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>make-jre-macos</id>
+                                <id>make-jre-macos-amd64</id>
                                 <goals>
                                     <goal>jlink</goal>
                                 </goals>
@@ -154,9 +170,9 @@
                                     <toolJdk>${mvnjlink.jdk.work.path}</toolJdk>
                                     <jdepsReportPath>${project.build.directory}${file.separator}jdeps.out
                                     </jdepsReportPath>
-                                    <output>${project.build.directory}${file.separator}jre_macos</output>
+                                    <output>${project.build.directory}${file.separator}jre_macos_amd64</output>
                                     <modulePaths>
-                                        <path>${mvnjlink.jdk.macos.path}${file.separator}jmods</path>
+                                        <path>${mvnjlink.jdk.macos.amd64.path}${file.separator}jmods</path>
                                     </modulePaths>
                                     <options>
                                         <option>--compress=2</option>
@@ -169,7 +185,7 @@
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>make-jre-windows</id>
+                                <id>make-jre-macos-arm64</id>
                                 <goals>
                                     <goal>jlink</goal>
                                 </goals>
@@ -177,9 +193,32 @@
                                     <toolJdk>${mvnjlink.jdk.work.path}</toolJdk>
                                     <jdepsReportPath>${project.build.directory}${file.separator}jdeps.out
                                     </jdepsReportPath>
-                                    <output>${project.build.directory}${file.separator}jre_windows</output>
+                                    <output>${project.build.directory}${file.separator}jre_macos_arm64</output>
                                     <modulePaths>
-                                        <path>${mvnjlink.jdk.windows.path}${file.separator}jmods</path>
+                                        <path>${mvnjlink.jdk.macos.arm64.path}${file.separator}jmods</path>
+                                    </modulePaths>
+                                    <options>
+                                        <option>--compress=2</option>
+                                        <option>--no-header-files</option>
+                                        <option>--no-man-pages</option>
+                                    </options>
+                                    <addModules>
+                                        <module>jdk.crypto.ec</module>
+                                    </addModules>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>make-jre-windows-amd64</id>
+                                <goals>
+                                    <goal>jlink</goal>
+                                </goals>
+                                <configuration>
+                                    <toolJdk>${mvnjlink.jdk.work.path}</toolJdk>
+                                    <jdepsReportPath>${project.build.directory}${file.separator}jdeps.out
+                                    </jdepsReportPath>
+                                    <output>${project.build.directory}${file.separator}jre_windows_amd64</output>
+                                    <modulePaths>
+                                        <path>${mvnjlink.jdk.windows.amd64.path}${file.separator}jmods</path>
                                     </modulePaths>
                                     <options>
                                         <option>--compress=2</option>
@@ -259,45 +298,59 @@
                         <artifactId>maven-assembly-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>make-linux</id>
+                                <id>make-linux-amd64</id>
                                 <phase>install</phase>
                                 <goals>
                                     <goal>single</goal>
                                 </goals>
                                 <configuration>
                                     <appendAssemblyId>false</appendAssemblyId>
-                                    <finalName>${project.build.finalName}-linux-x64-withjdk</finalName>
+                                    <finalName>${project.build.finalName}-linux-amd64-jdk</finalName>
                                     <descriptors>
-                                        <descriptor>src${file.separator}assembly${file.separator}linux.xml</descriptor>
+                                        <descriptor>src${file.separator}assembly${file.separator}linux_amd64.xml</descriptor>
                                     </descriptors>
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>make-windows</id>
+                                <id>make-windows-amd64</id>
                                 <phase>install</phase>
                                 <goals>
                                     <goal>single</goal>
                                 </goals>
                                 <configuration>
                                     <appendAssemblyId>false</appendAssemblyId>
-                                    <finalName>${project.build.finalName}-windows-x64-withjdk</finalName>
+                                    <finalName>${project.build.finalName}-windows-amd64-jdk</finalName>
                                     <descriptors>
-                                        <descriptor>src${file.separator}assembly${file.separator}windows.xml
+                                        <descriptor>src${file.separator}assembly${file.separator}windows_amd64.xml
                                         </descriptor>
                                     </descriptors>
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>make-mac</id>
+                                <id>make-mac-amd64</id>
                                 <phase>install</phase>
                                 <goals>
                                     <goal>single</goal>
                                 </goals>
                                 <configuration>
                                     <appendAssemblyId>false</appendAssemblyId>
-                                    <finalName>${project.build.finalName}-macos-x64-withjdk</finalName>
+                                    <finalName>${project.build.finalName}-macos-amd64-jdk</finalName>
                                     <descriptors>
-                                        <descriptor>src${file.separator}assembly${file.separator}mac.xml</descriptor>
+                                        <descriptor>src${file.separator}assembly${file.separator}mac_amd64.xml</descriptor>
+                                    </descriptors>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>make-mac-arm64</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <appendAssemblyId>false</appendAssemblyId>
+                                    <finalName>${project.build.finalName}-macos-arm64-jdk</finalName>
+                                    <descriptors>
+                                        <descriptor>src${file.separator}assembly${file.separator}mac_arm64.xml</descriptor>
                                     </descriptors>
                                 </configuration>
                             </execution>
@@ -309,7 +362,7 @@
                         <version>1.2</version>
                         <executions>
                             <execution>
-                                <id>remove-manifest-from-mac-jar</id>
+                                <id>remove-manifest-from-mac-amd64-jar</id>
                                 <goals>
                                     <goal>remove</goal>
                                 </goals>
@@ -317,7 +370,21 @@
                                 <configuration>
                                     <fileset>
                                         <directory>
-                                            ${project.build.directory}${file.separator}${project.build.finalName}-macos-x64-withjdk.jar${file.separator}META-INF
+                                            ${project.build.directory}${file.separator}${project.build.finalName}-macos-amd64-jdk.jar${file.separator}META-INF
+                                        </directory>
+                                    </fileset>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>remove-manifest-from-mac-arm64-jar</id>
+                                <goals>
+                                    <goal>remove</goal>
+                                </goals>
+                                <phase>install</phase>
+                                <configuration>
+                                    <fileset>
+                                        <directory>
+                                            ${project.build.directory}${file.separator}${project.build.finalName}-macos-arm64-jdk.jar${file.separator}META-INF
                                         </directory>
                                     </fileset>
                                 </configuration>
@@ -329,17 +396,32 @@
                         <artifactId>copy-rename-maven-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>rename-mac-jar-to-zip</id>
+                                <id>rename-mac-amd64-jar-to-zip</id>
                                 <phase>install</phase>
                                 <goals>
                                     <goal>rename</goal>
                                 </goals>
                                 <configuration>
                                     <sourceFile>
-                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-x64-withjdk.jar
+                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-amd64-jdk.jar
                                     </sourceFile>
                                     <destinationFile>
-                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-x64-withjdk.zip
+                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-amd64-jdk.zip
+                                    </destinationFile>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>rename-mac-arm64-jar-to-zip</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>rename</goal>
+                                </goals>
+                                <configuration>
+                                    <sourceFile>
+                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-arm64-jdk.jar
+                                    </sourceFile>
+                                    <destinationFile>
+                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-arm64-jdk.zip
                                     </destinationFile>
                                 </configuration>
                             </execution>
