--- a/battleships-resurrection/gfx-playroom-server/pom.xml
+++ b/battleships-resurrection/gfx-playroom-server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.igormaznitsa</groupId>
         <artifactId>battleships-resurrection</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
 
     <artifactId>gfx-playroom-server</artifactId>
