--- a/battleships-resurrection/battleships-client-pc/pom.xml
+++ b/battleships-resurrection/battleships-client-pc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.igormaznitsa</groupId>
         <artifactId>battleships-resurrection</artifactId>
-        <version>1.0.3</version>
+        <version>1.0.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>battleships-client-pc</artifactId>
@@ -22,7 +22,7 @@
             <properties>
                 <embedded.jdk.provider>BELLSOFT</embedded.jdk.provider>
                 <embedded.jdk.type>jdk</embedded.jdk.type>
-                <embedded.jdk.version>16+36</embedded.jdk.version>
+                <embedded.jdk.version>17+35</embedded.jdk.version>
             </properties>
             <build>
                 <plugins>
@@ -247,12 +247,12 @@
                                 </opts>
                             </jre>
                             <versionInfo>
-                                <fileVersion>0.1.0.3</fileVersion>
-                                <txtFileVersion>0.1.0.3</txtFileVersion>
+                                <fileVersion>0.1.0.4</fileVersion>
+                                <txtFileVersion>0.1.0.4</txtFileVersion>
                                 <fileDescription>battleship</fileDescription>
                                 <copyright>Copyright &#169; 2001</copyright>
-                                <productVersion>0.1.0.3</productVersion>
-                                <txtProductVersion>0.1.0.3</txtProductVersion>
+                                <productVersion>0.1.0.4</productVersion>
+                                <txtProductVersion>0.1.0.4</txtProductVersion>
                                 <productName>RuSoft BattleShip game</productName>
                                 <companyName>RuSoft</companyName>
                                 <internalName>${project.name}</internalName>
